--- a/summerize.ipynb
+++ b/summerize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "906dd4be-e9c2-4072-8d92-1f0a9b884604",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "505c1126-84c3-49ed-b80e-f5d6d7348f60",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "27e4e2fe-b60f-4214-b52d-06877a1a6659",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "17a15383-035f-4589-9e7a-03eb52cd86e5",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "f412c3e8-357e-47ab-b474-6658ca1e62cf",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "id": "7282f81e-2696-455e-94fb-9d4dcfe6e8fc",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "That sounds exciting! Large Language Models (LLMs) have a lot of potential applications. What specific project are you working on, and how can I assist you with it?\n"
+      "That sounds exciting! What kind of project are you working on with LLM (Large Language Models)? Are you developing a chatbot, content generation tool, language translation system, or something else? Let me know how I can assist you!\n"
      ]
     }
    ],
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "cd9ee422-72c1-4461-9f79-78a2ac7499ca",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "id": "e1e6d647-0458-44e7-8151-9b7ba486c88d",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "05fde3be-581d-46e1-959b-60d94ed2bd09",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "bf651633-95ed-405c-8e34-5f872a09f60d",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "id": "2c8ca4de-89dd-4a51-8660-4a056aaaaf75",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 12,
    "id": "ccf9c8d9-3baf-4fc7-be7b-e1418c81b927",
    "metadata": {},
    "outputs": [],
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "dead1f8a-0c2b-4b76-8bf4-f7d06aced375",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "  'content': 'You are looking at a website titled AI Explorables | PAIR\\nThe contents of this website is as follows; please provide a short summary of this website in markdown. If it includes news or announcements, then summarize these too.\\n\\nGuidebook\\nExplorables\\nTools\\nResearch\\nEvents\\nAI Explorables\\nBig ideas in machine learning, simply explained\\nThe rapidly increasing usage of machine learning raises complicated questions: How can we tell if models are fair? Why do models make the predictions that they do? What are the privacy implications of feeding enormous amounts of data into models?\\nThis ongoing series of interactive essays will walk you through these important concepts.\\nCan Large Language Models Explain Their Internal Mechanisms?\\nAn introduction to Patchscopes, an inspection framework for explaining the hidden representations of LLMs, with LLMs.\\nStart exploring\\nDo Machine Learning Models Memorize or Generalize?\\nAn introduction to grokking and mechanistic interpretability.\\nStart exploring\\nWhat Have Language Models Learned?\\nBy asking language models to fill in the blank, we can probe their understanding of the world.\\nStart exploring\\nConfidently Incorrect Models to Humble Ensembles\\nML models sometimes make confidently incorrect predictions when they encounter out of distribution data. Ensembles of models can make better predictions by averaging away mistakes.\\nStart exploring\\nCollecting Sensitive Information\\nThe availability of giant datasets and faster computers is making it harder to collect and study private information without inadvertently violating people’s privacy.\\nStart exploring\\nWhy Some Models Leak Data\\nMachine learning models use large amounts of data, some of which can be sensitive. If they’re not trained correctly, sometimes that data is inadvertently revealed.\\nStart exploring\\nCan a Model Be Differentially Private and Fair?\\nTraining models with differential privacy stops models from inadvertently leaking sensitive data, but there’s an unexpected side-effect: reduced accuracy on underrepresented subgroups.\\nStart exploring\\nFederated Learning\\nMost machine learning models are trained by collecting vast amounts of data on a central server. Federated learning makes it possible to train models without any user’s raw data leaving their device.\\nStart exploring\\nAre Model Predictions Probabilities?\\nMachine learning models express their uncertainty as model scores, but through calibration we can transform these scores into probabilities for more effective decision making.\\nStart exploring\\nSearching for Unintended Biases With Saliency\\nMachine learning models sometimes learn from spurious correlations in training data. Trying to understand\\nhow\\nmodels make predictions gives us a shot at spotting flawed models.\\nStart exploring\\nDatasets Have Worldviews\\nEvery dataset communicates a different perspective. When you shift your perspective, your conclusions can shift, too.\\nStart exploring\\nMeasuring Diversity\\nSearch results that reflect historic inequities can amplify stereotypes and perpetuate under-representation. Carefully measuring diversity in data sets can help.\\nStart exploring\\nMeasuring Fairness\\nThere are multiple ways to measure accuracy. No matter how we build our model, accuracy across these measures will vary when applied to different groups of people.\\nStart exploring\\nHidden Bias\\nModels trained on real-world data can encode real-world bias. Hiding information about protected classes doesn’t always fix things — sometimes it can even hurt.\\nStart exploring\\nGoogle Research\\nGoogle Design'}]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "bbbb7696-7aaf-43aa-b723-a91a930ab7e4",
    "metadata": {},
    "outputs": [],
@@ -349,17 +349,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "484491f1-2edc-4785-baf8-39b5363b7ab7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'# AI Explorables | PAIR\\n\\n**Overview:**  \\nAI Explorables is an educational platform that simplifies complex concepts in machine learning, focusing on big ideas and important ethical considerations. The website offers an ongoing series of interactive essays designed to enhance understanding of various topics, such as model fairness, interpretation, privacy implications, and more.\\n\\n## Key Sections:\\n\\n- **Guidebook:**  \\n  A resource for navigating the world of machine learning concepts.\\n\\n- **Explorables:**  \\n  Interactive essays on significant machine learning ideas, including:\\n  - **Patchscopes:** An inspection framework for large language models.\\n  - **Grokking and Mechanistic Interpretability:** Exploring the balance between memorization and generalization in models.\\n  - **Understanding Language Models:** Investigating what language models have truly learned.\\n  - **Confidence in Predictions:** The challenges of models making incorrect predictions.\\n  - **Privacy Concerns:** Discussing the challenges of data collection and privacy violations.\\n  - **Data Leakage:** Investigating how models can inadvertently reveal sensitive data.\\n  - **Differential Privacy vs. Fairness:** Balancing the privacy of sensitive data with representation accuracy in models.\\n  - **Federated Learning:** A method that allows training models without raw user data.\\n  - **Probabilities in Predictions:** Transforming model scores into true probabilities for better decision making.\\n  - **Bias Detection:** Methods for identifying unwarranted biases in model predictions.\\n  - **Dataset Perspectives:** Understanding how datasets shape conclusions based on their inherent biases.\\n  - **Measuring Diversity and Fairness:** Examining the importance of diversity in datasets to address stereotypes and inequity.\\n  - **Hidden Bias in Real-World Data:** How training data can embed real-world biases.\\n\\n- **Tools:**  \\n  Resources and tools for exploring machine learning concepts in practice.\\n\\n- **Research:**  \\n  A section dedicated to ongoing academic efforts in machine learning and AI ethics.\\n\\n- **Events:**  \\n  Information about upcoming events, workshops, or conferences related to AI and machine learning.\\n\\n## Summary of Announcements:  \\nCurrently, there are no specific news or announcements highlighted on the site. The emphasis remains on providing educational content and resources related to machine learning concepts.'"
+       "\"# AI Explorables | PAIR\\n\\n**Website Summary**  \\nAI Explorables is a platform that aims to simplify and explain complex concepts in machine learning through interactive essays. It addresses critical questions about fairness, privacy, and the behavior of machine learning models, providing users with insights into contemporary challenges in AI. The site features a series of explorables that delve into topics such as:\\n\\n- **Model Interpretability**: Understanding how models explain their predictions and internal mechanisms.\\n- **Learning Dynamics**: Distinguishing between memorization and generalization in models.\\n- **Data Privacy**: Examining the implications of using large datasets and the risks of data leakage.\\n- **Model Performance**: Investigating the accuracy of model predictions and potential biases.\\n\\nThe content is designed to enhance understanding of these significant issues and is suitable for those looking to explore the implications of AI in society.\\n\\n### Notable Explorables\\n1. **Can Large Language Models Explain Their Internal Mechanisms?**\\n2. **Do Machine Learning Models Memorize or Generalize?**\\n3. **What Have Language Models Learned?**\\n4. **Confidently Incorrect Models to Humble Ensembles**\\n5. **Collecting Sensitive Information**\\n6. **Why Some Models Leak Data**\\n7. **Can a Model Be Differentially Private and Fair?**\\n8. **Federated Learning**\\n9. **Are Model Predictions Probabilities?**\\n10. **Searching for Unintended Biases With Saliency**\\n11. **Datasets Have Worldviews**\\n12. **Measuring Diversity**\\n13. **Measuring Fairness**\\n14. **Hidden Bias**\\n\\n**Research and Tools**  \\nIn addition to explorables, the website includes sections on tools, research, and events related to AI and machine learning, enhancing the users' ability to understand and engage with these topics in greater depth. \\n\\n**No News or Announcements**  \\nThe site does not appear to feature any specific news or announcements at this time.\""
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "3bc97c2b-ed96-4271-aa72-807de51cb617",
    "metadata": {},
    "outputs": [],
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "8ceaca4c-75ce-4a91-af5f-a0b84af41b44",
    "metadata": {},
    "outputs": [
@@ -391,62 +391,31 @@
       "text/markdown": [
        "# AI Explorables | PAIR Summary\n",
        "\n",
-       "**Website Overview:**\n",
-       "AI Explorables is an educational platform dedicated to simplifying complex concepts in machine learning. It addresses critical questions surrounding fairness, interpretability, and privacy as machine learning technology becomes increasingly prevalent. The site features a series of interactive essays exploring various topics to enhance understanding.\n",
+       "**Overview**  \n",
+       "AI Explorables is an initiative that aims to demystify complex concepts in machine learning through a series of interactive essays. The website addresses critical questions about model fairness, interpretable predictions, privacy implications, and the overall impact of machine learning technologies.\n",
        "\n",
-       "## Key Sections\n",
-       "- **Guidebook:** Resourceful links and guidelines for navigating machine learning concepts.\n",
-       "- **Explorables:** Interactive essays on machine learning topics.\n",
-       "- **Tools:** Utilities and applications relevant to machine learning.\n",
-       "- **Research:** Insights and findings from ongoing studies in AI.\n",
-       "- **Events:** Information about upcoming conferences and meeting opportunities in the field of AI.\n",
+       "**Key Sections**  \n",
+       "- **Guidebook**: Provides foundational knowledge for understanding machine learning concepts.\n",
+       "- **Explorables**: Offers interactive essays that explore various themes and ideas in machine learning, encouraging user engagement and exploration.\n",
+       "- **Tools**: Presents software and resources to assist in machine learning projects.\n",
+       "- **Research**: Details ongoing research in the field of artificial intelligence.\n",
+       "- **Events**: Lists upcoming events related to AI and machine learning.\n",
        "\n",
-       "## Featured Explorables\n",
-       "- **Can Large Language Models Explain Their Internal Mechanisms?**  \n",
-       "  Introduction to Patchscopes, a framework for explaining the hidden aspects of LLMs.\n",
+       "**Highlighted Explorables**  \n",
+       "1. **Can Large Language Models Explain Their Internal Mechanisms?** - Introduces Patchscopes for inspecting LLMs' hidden representations.\n",
+       "2. **Do Machine Learning Models Memorize or Generalize?** - Discusses grokking and the interpretability of models.\n",
+       "3. **What Have Language Models Learned?** - Explores language models' understanding through fill-in-the-blank tasks.\n",
+       "4. **Confidently Incorrect Models to Humble Ensembles** - Examines how ensemble models improve prediction reliability.\n",
+       "5. **Collecting Sensitive Information** - Addresses privacy concerns related to data collection.\n",
+       "6. **Why Some Models Leak Data** - Discusses the risks of inadvertently revealing sensitive data through model training.\n",
+       "7. **Can a Model Be Differentially Private and Fair?** - Explores the tension between privacy and accuracy in diverse groups.\n",
        "\n",
-       "- **Do Machine Learning Models Memorize or Generalize?**  \n",
-       "  Examines the concepts of grokking and mechanistic interpretability.\n",
+       "**Additional Themes**  \n",
+       "- Federated Learning: A method to train models without exposing users' raw data.\n",
+       "- Model Predictions as Probabilities: Techniques for transforming model scores into probabilities for decision-making.\n",
+       "- Searching for Unintended Biases, Measuring Diversity, and Measuring Fairness: Topics concerning biases inherent in datasets and models.\n",
        "\n",
-       "- **What Have Language Models Learned?**  \n",
-       "  Investigates language models' understanding by analyzing their predictions.\n",
-       "\n",
-       "- **Confidently Incorrect Models to Humble Ensembles:**  \n",
-       "  Discusses how ensembles can improve prediction accuracy by averaging mistakes.\n",
-       "\n",
-       "- **Collecting Sensitive Information:**  \n",
-       "  Highlights challenges in privacy due to vast datasets and powerful computing.\n",
-       "\n",
-       "- **Why Some Models Leak Data:**  \n",
-       "  Explains the risks of sensitive data exposure in incorrectly trained models.\n",
-       "\n",
-       "- **Can a Model Be Differentially Private and Fair?**  \n",
-       "  Analyzes the trade-offs between privacy and accuracy in underrepresented groups.\n",
-       "\n",
-       "- **Federated Learning:**  \n",
-       "  Discusses training models while keeping raw user data secure on devices.\n",
-       "\n",
-       "- **Are Model Predictions Probabilities?**  \n",
-       "  Focuses on calibrating model scores into probabilities for better decision-making.\n",
-       "\n",
-       "- **Searching for Unintended Biases With Saliency:**  \n",
-       "  Explores methods to uncover biases learned from flawed training data.\n",
-       "\n",
-       "- **Datasets Have Worldviews:**  \n",
-       "  Examines how different datasets can lead to varying conclusions.\n",
-       "\n",
-       "- **Measuring Diversity:**  \n",
-       "  Addresses the impact of historic inequities in data representation.\n",
-       "\n",
-       "- **Measuring Fairness:**  \n",
-       "  Discusses the variability of model accuracy across different demographic groups.\n",
-       "\n",
-       "- **Hidden Bias:**  \n",
-       "  Explores how real-world bias can persist in models, even when attempts are made to conceal it.\n",
-       "\n",
-       "**Google Research and Google Design** are also associated with this platform, contributing insights and collaborative efforts.\n",
-       "\n",
-       "This web platform serves as both an educational resource and a tool for furthering discussions on ethical and practical implications of AI and machine learning technologies."
+       "Overall, AI Explorables serves as a valuable resource for individuals wanting to understand the implications and intricacies of machine learning in a more accessible manner."
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -471,7 +440,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv (3.13.7)",
    "language": "python",
    "name": "python3"
   },
@@ -485,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.13"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
